--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,27 @@
         android:id="@+id/et"
         android:layout_width="350dp"
         android:layout_height="160dp"
-        android:text="百度是一家只能公司"
+        android:background="@drawable/edit_shape"
+        android:text="I'm XXX"
+        android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16"
-        android:background="@drawable/edit_shape"/>
+        app:layout_constraintVertical_bias="0.159" />
+
+    <LinearLayout
+        android:id="@+id/linearlay_1"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.149"></LinearLayout>
 
     <Button
         android:id="@+id/btn"
@@ -68,5 +81,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
         android:background="@drawable/edit_shape"/>
+
+    <LinearLayout
+        android:id="@+id/linearlay_2"
+        android:layout_width="120dp"
+        android:layout_height="160dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.901"></LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
